tests/ui/consts/const-eval/index_out_of_bounds_propagated.stderr
error: this operation will panic at runtime
  --> $DIR/index_out_of_bounds_propagated.rs:5:5
   |
LL |     array[1];
   |     ^^^^^^^^ index out of bounds: the length is 1 but the index is 1
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: aborting due to 1 previous error

